--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.9",
     "evergreen-ui": "^4.8.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
